Fix Bug 286564 -  plan do not update the resources allocation number when selected

Add tooltips/whatsthis and show more info to make the dialog more userfriendly
Fix bug in dynamic allocation
BUG: 286564